--- Release version 1.01 (09.12.2013) -------------------------------------

Initial version

--- Release version 1.02 (29.12.2013) -------------------------------------

1. Add support of MONEY type
2. Add support of VARCHAR type
3. Implement join by timestamp 
4. Correctly handle NULL in TABLE_get(id) function
5. Correctly handle materialized views
6. Fix bug in autoload
7. Add EMA and ATR indicators
8. Support non-character timeseries ID
9. Fix bug in infinite timeseries detection
10. Add more overloaded binary operators accepting numeric parameter
11. Support grand, group and hash ALL/ANY aggregates.
12. Make timestamp join more flexible: add direction parameter
13. Reimplement insert trigger in C

--- Release version 1.03 (31.01.2014) -------------------------------------
1. Take in account extra_float_digits for printing floating point values
2. Add cs_filter_first_pos function
3. Support disk mode
4. Support RLE compression

--- Release version 1.04 (05.03.2014) -------------------------------------
1. Add cs_trend function
2. Fix hang in case of calculating aggregates for unbounded sequence
3. Fix incorrect construction of string constants
4. Support bool type
5. Fix bug in parallel executor causing crash in case of empty result
6. Add TABLE_is_loaded() function
7. Fix IMCS context cleanup bug in case of nested SPI calls
8. Add limit parameter to XXX_get() function

--- Release version 1.05 (??.03.2014) -------------------------------------
1. Fix bugs in cs_hash_dup_count
2. Fix handling of scalar types in cs_project
3. Support cast to character type
4. Thread safe error reporting
5. Add TABLE_id() and TABLE_timestamp() functions
6. Support load of unlimited varying size strings to columnar store using dictionary
7. Fix synchronization issue in delete function